--- a/src/main/resources/templates/ikh/seller/delivery/search.html
+++ b/src/main/resources/templates/ikh/seller/delivery/search.html
@@ -23,7 +23,7 @@
     <!-- CSS -->
     <link rel='stylesheet' type='text/css' media='screen' th:href='@{/css/ikh/seller.css}'>
     <link rel='stylesheet' type='text/css' media='screen' th:href='@{/css/jk/seller.css}'>
-    <link rel="icon" th:href="@{/images/jk/sobun_seller.ico}">
+    <link rel="icon" th:href="@{/images/jk/sobunseller.ico}">
 </head>
 
 <body class="sb-nav-fixed">
@@ -303,7 +303,7 @@
             document.getElementById('btn-0').setAttribute('class', 'btn btn-outline-primary active');
             document.getElementById('btn-1').setAttribute('class', 'btn btn-outline-primary');
             document.getElementById('btn-2').setAttribute('class', 'btn btn-outline-primary');
-            document.getElementById('btn-3').setAttribute('class', 'btn btn-outline-primary');            
+            document.getElementById('btn-3').setAttribute('class', 'btn btn-outline-primary');
             document.getElementById('btndv').setAttribute('value', enid);            
             // name 추가해주기
         }
