--- a/src/main/resources/templates/ikh/seller/item/searchdetail.html
+++ b/src/main/resources/templates/ikh/seller/item/searchdetail.html
@@ -24,7 +24,7 @@
     <!-- CSS -->
     <link rel='stylesheet' type='text/css' media='screen' th:href='@{/css/ikh/seller.css}'>
     <link rel='stylesheet' type='text/css' media='screen' th:href='@{/css/jk/seller.css}'>
-    <link rel="icon" th:href="@{/images/jk/sobun_seller.ico}">
+    <link rel="icon" th:href="@{/images/jk/sobunseller.ico}">
 </head>
 
 <body class="sb-nav-fixed">
@@ -41,7 +41,7 @@
             <main>                
                 <div style="padding-left: 15px; padding-top: 30px; padding-right: 15px;">
                     <div class="container-fluid px-4"> <!-- 옆쪽에 딱 붙음. -->
-                        <h2 style="padding-bottom : 15px;">[[${itemname}]] 물품의 판매 통계입니다.
+                        <h2 style="padding-bottom : 15px;">[[${itemname}]] 물품의 판매 통계입니다.                        
                             <a class="btn btn-dark" th:href="@{/seller/item/search.do}" style="float: right;">목록으로</a>
                         </h2>
                         
